Zadania/zadania podczas zajęć/zajecia01/04_09_2018 repl.txt
  File "<stdin>", line 1, in <module>
NameError: name 'oxfff' is not defined
>>> type(0xfff)
<class 'int'>
>>>
>>>
>>> 4.3
4.3
>>> 4,3
(4, 3)
>>>
>>>
>>> type(232.2)
<class 'float'>
>>>
>>> 123e3
123000.0
>>>
>>> type(2e-4)
<class 'float'>
>>>
>>> type(none)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'none' is not defined
>>> type(None)
<class 'NoneType'>
>>>
>>>
>>> True
True
>>> true
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'true' is not defined
>>> False
False
>>> type(True)
<class 'bool'>
>>> True+3
4
>>> False+2
2
>>> false+2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'false' is not defined
>>>
>>>
>>> False+10
10
>>> True+10
11
>>> 'to jest tekst'
'to jest tekst'
>>> 'to jest inny tekst"
  File "<stdin>", line 1
    'to jest inny tekst"
                       ^
SyntaxError: EOL while scanning string literal
>>> "to jest inny tekst"
'to jest inny tekst'
>>> '''to jest
...
... tekst'''
'to jest\n\ntekst'
>>>
>>> print('tekst')
tekst
>>> print("to jest\n\n\n tekst')
  File "<stdin>", line 1
    print("to jest\n\n\n tekst')
                               ^
SyntaxError: EOL while scanning string literal
>>> print('to jest\n\n\n tekst')
to jest


 tekst
>>> print(321)
321
>>>
>>> 'to jest'+'tekst'
'to jesttekst'
>>> 'to jest'+' tekst'
'to jest tekst'
>>> 'to jest'+" tekst"
'to jest tekst'
>>>
>>> 'tekst'*3
'tekstteksttekst'
>>> 'tekst'*'inny tekst'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can't multiply sequence by non-int of type 'str'
>>> 'x'*10
'xxxxxxxxxx'
>>>
>>>
>>> b'tekst'
b'tekst'
>>>
>>> b'tekst ��ty'
  File "<stdin>", line 1
SyntaxError: bytes can only contain ASCII literal characters.
>>> type(b'kolejny tekst')
<class 'bytes'>
>>>
>>>
>>> liczba=42
>>> liczba
42
>>> liczba + liczba
84
>>> liczba * 3
126
>>> liczba2 = 237e-5
>>> liczba2
0.00237
>>> wynik = (4 + 12) / 7
>>> wynik
2.2857142857142856
>>> wynik = 'tekst wyniku'
>>> wynik
'tekst wyniku'
>>> wynik / 5
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for /: 'str' and 'int'
>>> type(wynik)
<class 'str'>
>>> del wynik
>>> wynik
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'wynik' is not defined
>>> int = 13
>>> del int
>>> exit
Use exit() or Ctrl-Z plus Return to exit
>>> ^Z


C:\Users\USER>python
Python 3.7.0 (v3.7.0:1bf9cc5093, Jun 27 2018, 04:06:47) [MSC v.1914 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> liczba = 14
>>> Liczba = 1003
>>> liczba
14
>>> liczbe
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'liczbe' is not defined
>>>
>>>
>>> liczba_kursantow = 16
>>> liczba kursanow = 16
  File "<stdin>", line 1
    liczba kursanow = 16
                  ^
SyntaxError: invalid syntax
>>> 2nascie = 12
  File "<stdin>", line 1
    2nascie = 12
          ^
SyntaxError: invalid syntax
>>> int(123)
123
>>> int
<class 'int'>
>>>
>>>
>>>
>>> cena_paliwa = 5.08
>>> dystans = 250
>>> spalanie_na100km = 6.7
>>> spalanie_na100km * dystans 100 * cena_paliwa
  File "<stdin>", line 1
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax
>>> spalanie_na100km * dystans / 100 * cena_paliwa
85.09
>>> koszt = spalanie_na100km * dystans / 100 * cena_paliwa
>>> koszt
85.09
>>> koszt = spalanie_na100km * dystans / 100 * cena_paliwa
>>> koszt
85.09
>>> exit ()


C:\Users\USER\Desktop>python
Python 3.7.0 (v3.7.0:1bf9cc5093, Jun 27 2018, 04:06:47) [MSC v.1914 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> exit()

C:\Users\USER\Desktop>python skrypt.py

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>skrypt.pl
'skrypt.pl' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\USER\Desktop>skrypt.py
  File "C:\Users\USER\Desktop\skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>^Z
C:\Users\USER\Desktop>python
Python 3.7.0 (v3.7.0:1bf9cc5093, Jun 27 2018, 04:06:47) [MSC v.1914 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> ^Z


C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
Koszt wyprawy to:
85.09

C:\Users\USER\Desktop>